IManager, webservice, webservice client tests, missing get results, submit special query